--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A nodeJS application to post charts based on daily vaccinations, swabs, cases, and deaths to twitter ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=html mocha"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +12,17 @@
   "dependencies": {
     "chart.js": "^2.9.4",
     "chartjs-node-canvas": "^3.1.0",
+    "decimal.js": "^10.3.1",
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
+    "properties-reader": "^2.2.0",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.2"
   }
 }
