--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "mocha": "^9.0.3",
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-node-externals": "^3.0.0"
   }
 }
