--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A nodeJS application to post charts based on daily vaccinations, swabs, cases, and deaths to twitter ",
   "main": "index.js",
   "scripts": {
-    "test": "nyc --reporter=html mocha"
+    "test": "nyc --reporter=html mocha",
+    "local": "webpack --config webpack/local.config.js",
+    "lambda": "webpack --config webpack/lambda.config.js"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +22,15 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "copy-webpack-plugin": "^9.0.1",
     "mocha": "^9.0.3",
+    "node-fetch": "^2.6.1",
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^11.1.2",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
