--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chart.js": "^2.9.4",
-    "chartjs-node-canvas": "^3.1.0",
+    "chart.js": "^2.9.3",
+    "chartjs-node-canvas": "^3.2.0",
     "decimal.js": "^10.3.1",
     "log4js": "^6.3.0",
     "moment": "^2.29.1",
@@ -21,6 +21,9 @@
     "twit": "^2.2.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
+    "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "copy-webpack-plugin": "^9.0.1",
     "mocha": "^9.0.3",
@@ -28,8 +31,10 @@
     "nyc": "^15.1.0",
     "proxyquire": "^2.1.3",
     "sinon": "^11.1.2",
-    "webpack": "^5.47.0",
+    "terser-webpack-plugin": "^5.1.4",
+    "webpack": "^5.48.0",
     "webpack-cli": "^4.7.2",
+    "webpack-dist-zip": "^1.1.2",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
   }
